grammar/CopyCppParser.py
# Generated from grammar/CopyCpp.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CopyCppParser ( Parser ):

    grammarFileName = "CopyCpp.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'var'", "'int'", "'float32'", "'float64'", 
                     "'bool'", "'string'", "'void'", "'generator'", "'if'", 
                     "'else'", "'while'", "'for'", "'foreach'", "'in'", 
                     "'struct'", "'class'", "'extends'", "'private'", "'public'", 
                     "'protected'", "'return'", "'yield'", "'print'", "'read'", 
                     "'new'", "'null'", "<INVALID>", "'('", "')'", "'{'", 
                     "'}'", "'['", "']'", "';'", "','", "'.'", "'='", "':'", 
                     "'>'", "'<'", "'>='", "'<='", "'=='", "'!='", "'&&'", 
                     "'||'", "'^'", "'!'", "'+'", "'-'", "'*'", "'/'", "'%'" ]

    symbolicNames = [ "<INVALID>", "K_VAR", "K_INT", "K_FLOAT32", "K_FLOAT64", 
                      "K_BOOL", "K_STRING", "K_VOID", "K_GENERATOR", "K_IF", 
                      "K_ELSE", "K_WHILE", "K_FOR", "K_FOREACH", "K_IN", 
                      "K_STRUCT", "K_CLASS", "K_EXTENDS", "K_PRIVATE", "K_PUBLIC", 
                      "K_PROTECTED", "K_RETURN", "K_YIELD", "K_PRINT", "K_READ", 
                      "K_NEW", "K_NULL", "BOOL", "LPAREN", "RPAREN", "LBRACE", 
                      "RBRACE", "LBRACK", "RBRACK", "SEMI", "COMMA", "DOT", 
                      "ASSIGN", "COLON", "GT", "LT", "GTE", "LTE", "EQ", 
                      "NEQ", "AND_OP", "OR_OP", "XOR_OP", "NOT", "PLUS", 
                      "MINUS", "STAR", "SLASH", "MOD", "ID", "INT", "FLOAT", 
                      "STRING", "COMMENT", "WS" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_block = 2
    RULE_varDeclaration = 3
    RULE_type = 4
    RULE_assignment = 5
    RULE_ifStatement = 6
    RULE_whileStatement = 7
    RULE_forStatement = 8
    RULE_foreachStatement = 9
    RULE_structDecl = 10
    RULE_structMember = 11
    RULE_classDecl = 12
    RULE_classMember = 13
    RULE_constructorDecl = 14
    RULE_functionDecl = 15
    RULE_formalParams = 16
    RULE_formalParam = 17
    RULE_actualParams = 18
    RULE_returnStatement = 19
    RULE_yieldStatement = 20
    RULE_printStatement = 21
    RULE_readStatement = 22
    RULE_expr = 23

    ruleNames =  [ "program", "statement", "block", "varDeclaration", "type", 
                   "assignment", "ifStatement", "whileStatement", "forStatement", 
                   "foreachStatement", "structDecl", "structMember", "classDecl", 
                   "classMember", "constructorDecl", "functionDecl", "formalParams", 
                   "formalParam", "actualParams", "returnStatement", "yieldStatement", 
                   "printStatement", "readStatement", "expr" ]

    EOF = Token.EOF
    K_VAR=1
    K_INT=2
    K_FLOAT32=3
    K_FLOAT64=4
    K_BOOL=5
    K_STRING=6
    K_VOID=7
    K_GENERATOR=8
    K_IF=9
    K_ELSE=10
    K_WHILE=11
    K_FOR=12
    K_FOREACH=13
    K_IN=14
    K_STRUCT=15
    K_CLASS=16
    K_EXTENDS=17
    K_PRIVATE=18
    K_PUBLIC=19
    K_PROTECTED=20
    K_RETURN=21
    K_YIELD=22
    K_PRINT=23
    K_READ=24
    K_NEW=25
    K_NULL=26
    BOOL=27
    LPAREN=28
    RPAREN=29
    LBRACE=30
    RBRACE=31
    LBRACK=32
    RBRACK=33
    SEMI=34
    COMMA=35
    DOT=36
    ASSIGN=37
    COLON=38
    GT=39
    LT=40
    GTE=41
    LTE=42
    EQ=43
    NEQ=44
    AND_OP=45
    OR_OP=46
    XOR_OP=47
    NOT=48
    PLUS=49
    MINUS=50
    STAR=51
    SLASH=52
    MOD=53
    ID=54
    INT=55
    FLOAT=56
    STRING=57
    COMMENT=58
    WS=59

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CopyCppParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CopyCppParser.StatementContext)
            else:
                return self.getTypedRuleContext(CopyCppParser.StatementContext,i)


        def getRuleIndex(self):
            return CopyCppParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = CopyCppParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 48
                self.statement()
                self.state = 51 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 559853730286124030) != 0)):
                    break

            self.state = 53
            self.match(CopyCppParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CopyCppParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class PrintStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CopyCppParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def printStatement(self):
            return self.getTypedRuleContext(CopyCppParser.PrintStatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrintStmt" ):
                listener.enterPrintStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrintStmt" ):
                listener.exitPrintStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrintStmt" ):
                return visitor.visitPrintStmt(self)
            else:
                return visitor.visitChildren(self)


    class ClassDeclStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CopyCppParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def classDecl(self):
            return self.getTypedRuleContext(CopyCppParser.ClassDeclContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDeclStmt" ):
                listener.enterClassDeclStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDeclStmt" ):
                listener.exitClassDeclStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDeclStmt" ):
                return visitor.visitClassDeclStmt(self)
            else:
                return visitor.visitChildren(self)


    class AssignStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CopyCppParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def assignment(self):
            return self.getTypedRuleContext(CopyCppParser.AssignmentContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignStmt" ):
                listener.enterAssignStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignStmt" ):
                listener.exitAssignStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignStmt" ):
                return visitor.visitAssignStmt(self)
            else:
                return visitor.visitChildren(self)


    class BlockStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CopyCppParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def block(self):
            return self.getTypedRuleContext(CopyCppParser.BlockContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlockStmt" ):
                listener.enterBlockStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlockStmt" ):
                listener.exitBlockStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockStmt" ):
                return visitor.visitBlockStmt(self)
            else:
                return visitor.visitChildren(self)


    class StructDeclStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CopyCppParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def structDecl(self):
            return self.getTypedRuleContext(CopyCppParser.StructDeclContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStructDeclStmt" ):
                listener.enterStructDeclStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStructDeclStmt" ):
                listener.exitStructDeclStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStructDeclStmt" ):
                return visitor.visitStructDeclStmt(self)
            else:
                return visitor.visitChildren(self)


    class ForeachStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CopyCppParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def foreachStatement(self):
            return self.getTypedRuleContext(CopyCppParser.ForeachStatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForeachStmt" ):
                listener.enterForeachStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForeachStmt" ):
                listener.exitForeachStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForeachStmt" ):
                return visitor.visitForeachStmt(self)
            else:
                return visitor.visitChildren(self)


    class CommentStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CopyCppParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def COMMENT(self):
            return self.getToken(CopyCppParser.COMMENT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCommentStmt" ):
                listener.enterCommentStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCommentStmt" ):
                listener.exitCommentStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCommentStmt" ):
                return visitor.visitCommentStmt(self)
            else:
                return visitor.visitChildren(self)


    class IfStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CopyCppParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ifStatement(self):
            return self.getTypedRuleContext(CopyCppParser.IfStatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStmt" ):
                listener.enterIfStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStmt" ):
                listener.exitIfStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStmt" ):
                return visitor.visitIfStmt(self)
            else:
                return visitor.visitChildren(self)


    class ExprStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CopyCppParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(CopyCppParser.ExprContext,0)

        def SEMI(self):
            return self.getToken(CopyCppParser.SEMI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprStmt" ):
                listener.enterExprStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprStmt" ):
                listener.exitExprStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprStmt" ):
                return visitor.visitExprStmt(self)
            else:
                return visitor.visitChildren(self)


    class WhileStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CopyCppParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def whileStatement(self):
            return self.getTypedRuleContext(CopyCppParser.WhileStatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStmt" ):
                listener.enterWhileStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStmt" ):
                listener.exitWhileStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStmt" ):
                return visitor.visitWhileStmt(self)
            else:
                return visitor.visitChildren(self)


    class VarDeclStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CopyCppParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def varDeclaration(self):
            return self.getTypedRuleContext(CopyCppParser.VarDeclarationContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDeclStmt" ):
                listener.enterVarDeclStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDeclStmt" ):
                listener.exitVarDeclStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDeclStmt" ):
                return visitor.visitVarDeclStmt(self)
            else:
                return visitor.visitChildren(self)


    class FuncDeclStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CopyCppParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def functionDecl(self):
            return self.getTypedRuleContext(CopyCppParser.FunctionDeclContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncDeclStmt" ):
                listener.enterFuncDeclStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncDeclStmt" ):
                listener.exitFuncDeclStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncDeclStmt" ):
                return visitor.visitFuncDeclStmt(self)
            else:
                return visitor.visitChildren(self)


    class YieldStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CopyCppParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def yieldStatement(self):
            return self.getTypedRuleContext(CopyCppParser.YieldStatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterYieldStmt" ):
                listener.enterYieldStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitYieldStmt" ):
                listener.exitYieldStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitYieldStmt" ):
                return visitor.visitYieldStmt(self)
            else:
                return visitor.visitChildren(self)


    class ReadStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CopyCppParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def readStatement(self):
            return self.getTypedRuleContext(CopyCppParser.ReadStatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReadStmt" ):
                listener.enterReadStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReadStmt" ):
                listener.exitReadStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReadStmt" ):
                return visitor.visitReadStmt(self)
            else:
                return visitor.visitChildren(self)


    class ForStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CopyCppParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def forStatement(self):
            return self.getTypedRuleContext(CopyCppParser.ForStatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForStmt" ):
                listener.enterForStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForStmt" ):
                listener.exitForStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitForStmt" ):
                return visitor.visitForStmt(self)
            else:
                return visitor.visitChildren(self)


    class ReturnStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a CopyCppParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def returnStatement(self):
            return self.getTypedRuleContext(CopyCppParser.ReturnStatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnStmt" ):
                listener.enterReturnStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnStmt" ):
                listener.exitReturnStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnStmt" ):
                return visitor.visitReturnStmt(self)
            else:
                return visitor.visitChildren(self)



    def statement(self):

        localctx = CopyCppParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 73
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                localctx = CopyCppParser.VarDeclStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 55
                self.varDeclaration()
                pass

            elif la_ == 2:
                localctx = CopyCppParser.AssignStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 56
                self.assignment()
                pass

            elif la_ == 3:
                localctx = CopyCppParser.IfStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 57
                self.ifStatement()
                pass

            elif la_ == 4:
                localctx = CopyCppParser.WhileStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 58
                self.whileStatement()
                pass

            elif la_ == 5:
                localctx = CopyCppParser.ForStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 59
                self.forStatement()
                pass

            elif la_ == 6:
                localctx = CopyCppParser.ForeachStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 60
                self.foreachStatement()
                pass

            elif la_ == 7:
                localctx = CopyCppParser.FuncDeclStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 61
                self.functionDecl()
                pass

            elif la_ == 8:
                localctx = CopyCppParser.ReturnStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 62
                self.returnStatement()
                pass

            elif la_ == 9:
                localctx = CopyCppParser.YieldStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 9)
                self.state = 63
                self.yieldStatement()
                pass

            elif la_ == 10:
                localctx = CopyCppParser.PrintStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 10)
                self.state = 64
                self.printStatement()
                pass

            elif la_ == 11:
                localctx = CopyCppParser.ReadStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 11)
                self.state = 65
                self.readStatement()
                pass

            elif la_ == 12:
                localctx = CopyCppParser.BlockStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 12)
                self.state = 66
                self.block()
                pass

            elif la_ == 13:
                localctx = CopyCppParser.StructDeclStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 13)
                self.state = 67
                self.structDecl()
                pass

            elif la_ == 14:
                localctx = CopyCppParser.ClassDeclStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 14)
                self.state = 68
                self.classDecl()
                pass

            elif la_ == 15:
                localctx = CopyCppParser.ExprStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 15)
                self.state = 69
                self.expr(0)
                self.state = 70
                self.match(CopyCppParser.SEMI)
                pass

            elif la_ == 16:
                localctx = CopyCppParser.CommentStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 16)
                self.state = 72
                self.match(CopyCppParser.COMMENT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(CopyCppParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(CopyCppParser.RBRACE, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CopyCppParser.StatementContext)
            else:
                return self.getTypedRuleContext(CopyCppParser.StatementContext,i)


        def getRuleIndex(self):
            return CopyCppParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = CopyCppParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(CopyCppParser.LBRACE)
            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 559853730286124030) != 0):
                self.state = 76
                self.statement()
                self.state = 81
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 82
            self.match(CopyCppParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(CopyCppParser.TypeContext,0)


        def ID(self):
            return self.getToken(CopyCppParser.ID, 0)

        def SEMI(self):
            return self.getToken(CopyCppParser.SEMI, 0)

        def ASSIGN(self):
            return self.getToken(CopyCppParser.ASSIGN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CopyCppParser.ExprContext)
            else:
                return self.getTypedRuleContext(CopyCppParser.ExprContext,i)


        def K_VAR(self):
            return self.getToken(CopyCppParser.K_VAR, 0)

        def LBRACK(self, i:int=None):
            if i is None:
                return self.getTokens(CopyCppParser.LBRACK)
            else:
                return self.getToken(CopyCppParser.LBRACK, i)

        def RBRACK(self, i:int=None):
            if i is None:
                return self.getTokens(CopyCppParser.RBRACK)
            else:
                return self.getToken(CopyCppParser.RBRACK, i)

        def getRuleIndex(self):
            return CopyCppParser.RULE_varDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDeclaration" ):
                listener.enterVarDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDeclaration" ):
                listener.exitVarDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDeclaration" ):
                return visitor.visitVarDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def varDeclaration(self):
